Fix: Adjusted the width of the search select element to prevent text from being cut off

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9706,7 +9706,13 @@ textarea {
     padding-left: 20px;
     padding-right: 20px;
     border: none;
-    border-radius: 30px; }
+    border-radius: 30px;
+    width: 100%;
+    height: 100%;
+    max-width: 100%; 
+    
+    
+   }
     .hero .form-search .form-control:hover, .hero .form-search .form-control:focus {
       outline: none;
       -webkit-box-shadow: none;
@@ -10312,6 +10318,8 @@ nav[aria-label="breadcrumb"] li:before {
   transition: all 0.3s;
   color: #fff; }
 
+
+
 .contact-info h4, .contact-info .h4 {
   font-size: 18px;
   padding: 0 0 0 60px; }
@@ -10375,3 +10383,67 @@ nav[aria-label="breadcrumb"] li:before {
       .site-footer .social li a:hover {
         background: #00204a;
         color: #fff; }
+
+.specs {
+  font-size: 16px;
+  color: #333;
+}
+
+.specs .icon-bed,
+.specs .icon-bath,
+.specs .icon-home {
+  font-size: 20px;
+  color: #005555;
+}
+
+.specs .caption {
+  font-weight: 600;
+  color: #000;
+}
+
+.property-description {
+  font-family: 'Work Sans', sans-serif; /* Usa una fuente atractiva */
+  font-size: 18px; /* Ajusta el tamaño de la fuente */
+  font-weight: 400; /* Ajusta el peso de la fuente */
+  color: #444; /* Ajusta el color de la fuente */
+  background: linear-gradient(135deg, #f9f9f9 0%, #e0e0e0 100%); /* Agrega un fondo con gradiente */
+  padding: 20px; /* Ajusta el relleno */
+  margin-bottom: 20px; /* Ajusta el margen inferior */
+  border-radius: 10px; /* Agrega bordes redondeados */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Agrega una sombra más pronunciada */
+  line-height: 1.8; /* Ajusta la altura de línea para mejorar la legibilidad */
+  border: 1px solid #ddd; /* Agrega un borde sutil */
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Agrega una transición suave */
+}
+
+.property-description:hover {
+  transform: translateY(-5px); /* Eleva el elemento al pasar el ratón */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Aumenta la sombra al pasar el ratón */
+}
+
+.property-description p {
+  margin: 0; /* Elimina el margen de los párrafos dentro de la descripción */
+}
+
+.property-description h3 {
+  font-size: 24px; /* Ajusta el tamaño de la fuente para los encabezados */
+  font-weight: 700; /* Ajusta el peso de la fuente para los encabezados */
+  color: #222; /* Ajusta el color de la fuente para los encabezados */
+  margin-bottom: 10px; /* Ajusta el margen inferior para los encabezados */
+}
+
+.property-description ul {
+  list-style-type: disc; /* Cambia el estilo de la lista */
+  padding-left: 20px; /* Ajusta el relleno izquierdo para las listas */
+}
+
+.property-description ul li {
+  margin-bottom: 10px; /* Ajusta el margen inferior para los elementos de la lista */
+}
+
+
+.property-meta {
+  font-size: 20px;
+  font-weight: 700;
+  color: #000;
+}
